--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,26 @@
 <resources>
-    <string name="app_name">Login</string>
-    <string name="usuario">Usuário</string>
+    <string name="app_name">Home</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_sign_up">Cadastro</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_name">Nome</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Senha</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_sign_up">Cadastrar</string>
+    <string name="action_sign_up_call">Cadastrar</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_up_short">Cadastro</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+         completions."
+     </string>
+    <string name="usuario">Usuario</string>
     <string name="senha">Senha</string>
-    <string name="login">login</string>
+    <string name="login">Login</string>
+    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
 </resources>
